--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "nodemailer": "^7.0.3",
     "pdfkit": "^0.17.0",
     "stripe": "^18.0.0"
   },
